2005-12-16 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkgadd.in: Corrected call to `get_dependencies'.

2005-12-14 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*.pkg: Removed the .pkg extension from the profiles.

2005-12-11 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in, scripts/pkgrm.in, scripts/pkgbuild.in,
	  scripts/pkgcheck.in, scripts/pkgget.in, scripts/pkgunpack.in,
	  scripts/pkginstall.in: Rewrote privilege handling.

2005-12-10 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/pkginstall.in: Rewrote parts to use the new install-log/
	  reroot setup.
	* scripts/libprometheus.bash.in, scripts/pkgget.in, scripts/pkgrm.in:
	  Cleaned up `source_profile' invocations, other cleanups.
	* scripts/pkginfo.in: Removed occurences of .pkg extensions.

2005-12-04 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/lfs.pkg: Simplified checks for existing lfs user and
	  group.

2005-12-03 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Removed dependency on `which'.
	* scripts/pkgadd.in: Completed move of helper scripts to
	  /usr/lib/prometheus.
	* scripts/*: Removed obsolete profile_cwd variable.
	* scripts/pkginfo.in, scripts/libprometheus.bash.in: Fixed a quoting
	  bug.
	* scripts/libprometheus.bash.in: Made libprometheus use the directories
	  below ~prometheus (ie. ~prometheus/{sources,build}).

2005-11-27 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* Makefile.defs, scripts/Makefile: moved the helper scripts
	  out of /usr/bin and into /usr/lib/prometheus.

2005-11-26 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* man/pkginfo.1.in: Updated pkginfo's man page.
	* scripts/pkginfo.in: Updated help screen.

2005-11-23 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* scripts/libprometheus.bash.in: Removed function
	  `get_installed_version'.
	* scripts/pkginfo.in: Re-wrote pkginfo.
